[gd_scene load_steps=11 format=3 uid="uid://caopj3vi3udov"]

[ext_resource type="PackedScene" uid="uid://cjsl4muxk01cc" path="res://lotto_machine.tscn" id="1_ejof4"]
[ext_resource type="Script" path="res://lotto_generator.gd" id="1_u26h6"]
[ext_resource type="PackedScene" uid="uid://dj3k26hgr08h3" path="res://lotto_ball_group.tscn" id="3_xofcs"]
[ext_resource type="PackedScene" uid="uid://dln2f077p82t2" path="res://lotto_machine_bridge.tscn" id="4_2trbg"]
[ext_resource type="PackedScene" uid="uid://ch2u4au7yoj0m" path="res://tube.tscn" id="4_k3han"]
[ext_resource type="PackedScene" uid="uid://c7bxhixmx88w0" path="res://lotto_points_layer.tscn" id="7_g5v55"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_plqt5"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_cwudk"]
sky_material = SubResource("ProceduralSkyMaterial_plqt5")

[sub_resource type="Environment" id="Environment_g53dy"]
background_mode = 2
sky = SubResource("Sky_cwudk")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fp2b1"]
albedo_color = Color(0, 0, 0, 1)
metallic_specular = 0.0

[node name="LottoGenerator" type="Node3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3.35075, 165, 0)
script = ExtResource("1_u26h6")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_g53dy")

[node name="lotto_machine" parent="." instance=ExtResource("1_ejof4")]
transform = Transform3D(20.0276, 0, 0, 0, 20.722, 0, 0, 0, 19.2949, 3.35267, 20.9144, 3.00504)

[node name="lotto_balls" parent="." instance=ExtResource("3_xofcs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.036, 12.6379, 3.18)

[node name="ReleasePoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7742, 10.1126, 3.29885)

[node name="Tube" parent="." instance=ExtResource("4_k3han")]
transform = Transform3D(-2.24579e-07, 0, 5.13777, 0, 3.08266, 0, -5.13777, 0, -2.24579e-07, 5.43463, -2.34275, 3.55412)

[node name="Bridge" parent="." instance=ExtResource("4_2trbg")]
transform = Transform3D(7.58699, 1.03676, -5.68434e-14, -1.62803, 4.83152, 0, 0, 0, 11.1908, 21.6531, -11.5073, 3.53747)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0.350207, 0.936672, 0, 0.936672, -0.350207, -1, -1.5308e-08, -4.09433e-08, 45.161, -10.855, 3.597)

[node name="lotto_points_layer" parent="." instance=ExtResource("7_g5v55")]

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
transform = Transform3D(2.22603, 0, 7.27596e-12, 0, 357.641, 0, 1.42109e-14, 0, -1574.08, -35.2851, 34.9339, 1.43051e-06)
material = SubResource("StandardMaterial3D_fp2b1")
